# sc-inteligencia-sc

./: .env.example  .gitignore  README.md  demo_uczai_result.json  pyproject.toml
.github/workflows/: atualizacao-mensal.yml
backend/: 01_schema_fase_a.sql  02_fix_rls.sql  03_campaign_lifecycle.sql  04_supporter_consent_required.sql  05_supporter_consent_immutable.sql  06_supporter_unregister.sql  07_fix_supporter_audit_search_path.sql  08_campaign_team_management.sql  09_candidate_core.sql  10_candidate_security.sql  11_campaign_candidate_backfill.sql  12_create_campaign_candidate_model.sql  13_update_campaign_candidate_model.sql  14_candidate_campaign_profiles.sql  README.md
data/: state.json
lookups/: municipios_br.csv  partidos.csv
painel/: campanha.html  gestao.html  index.html  perfil-estrategia.html
raw/: README.md  alternativas_testadas.json  coleta_stn_mds_siconfi_log.json  metadados_coleta.json  ssl_bypass_tests.json
raw/brasilapi/: cnpj_prefeituras_sc.json  siconfi_entes_sc.json
raw/camara/: ceap_sc_2024.json  deputados_sc.json  emendas_deputados_sc.json  perfis_deputados_sc.json
raw/datasus/: status_endpoints.json
raw/dou/: busca_api_servicos_buscar.json  busca_api_servicos_buscar_v2.json  busca_emenda_parlamentar_sc_2024.json  busca_emenda_parlamentar_sc_2024_json_accept.json  busca_emenda_uczai.json  coletar_dou.py  dados_gov_dou.json  (+12 more)
sc_inteligencia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap.py  gerar_cruzamento_sc.py  gerar_estado_sc.py  run_mensal.py
src/: __init__.py  config.py  schemas.py
(+58 files in other folders)
