[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-inteligencia"
version = "2026.04"
description = "Sistema de inteligência eleitoral-orçamentária SC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "pandas>=2.2",
    "pyarrow>=16",
    "duckdb>=0.10",
    "pydantic>=2.7",
    "pandera>=0.19",
    "rapidfuzz>=3.9",
    "unidecode>=1.3",
    "python-dotenv>=1.0",
    "rich>=13",
    "typer>=0.12",
    "anyio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
